name:                paychan-datastore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/runeksvendsen/paychan-datastore#readme
license:             PublicDomain
author:              Rune K. Svendsen
maintainer:          runesvend@gmail.com
copyright:           2016 Rune K. Svendsen
category:            Finance Network Bitcoin
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/runeksvendsen/paychan-datastore


library
  ghc-options:         -W -Wredundant-constraints
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, FunctionalDependencies
  exposed-modules:
                       DB.Model.Entity
                       DB.Model.EntityProps
                       DB.Model.DatastoreValue
                       DB.Model.Convert
                       DB.Model.Identifier
                       DB.Model.Request
                       DB.Types
                       DB.Util.Error
                       DB.Creation
                       Types
                       Util
                       Test.ArbitraryJSON
--                       Test.Main

  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base16-bytestring
                     , text
                     , unordered-containers
                     , gogol
                     , gogol-core
                     , gogol-datastore
                     , mtl
                     , lens
                     , aeson, vector, scientific
                     , cereal
                     , bitcoin-payment-channel, promissory-note-types
                     , QuickCheck
                     , string-conversions
                     , time
                     , http-conduit
                     , exceptions
                     , monad-control
                     , transformers
                     , async
                     , errors
                     , stm, stm-containers, hashable
                     , base64-bytestring


                     , quickcheck-text

test-suite json-convert
  default-language: Haskell2010
  default-extensions: OverloadedStrings, MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, FunctionalDependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: src
  main-is: Test/Main.hs
  other-modules: Test.ArbitraryJSON, DB.Types, DB.Model.EntityProps, DB.Model.DatastoreValue, DB.Creation
  ghc-options: -main-is Test.Main
  build-depends:
      base
    , paychan-datastore
    , gogol-datastore
    , aeson
    , HUnit >= 1.3
    , lens
    , QuickCheck >= 2.8.2
    , test-framework, test-framework-quickcheck2
    , quickcheck-text
    , scientific
    , text
    , bytestring
    , vector
    , transformers
    , unordered-containers
    , bitcoin-payment-channel
    , string-conversions


--test-suite paychan-datastore
--  type:                 exitcode-stdio-1.0
--  main-is:              Test.hs
--  default-language:     Haskell2010
--  hs-source-dirs:       src
--  ghc-options:          -Wall -main-is Test
--  build-depends:       base >= 4.7 && < 5
--                       , paychan-datastore
--                       , bytestring
--                       , base16-bytestring
--                       , text
--                       , unordered-containers
--                       , gogol
--                       , gogol-core
--                       , gogol-datastore
--                       , mtl
--                       , lens
--                       , aeson
--                       , cereal
--                       , bitcoin-payment-channel
--                       , QuickCheck
--                       , string-conversions
--                       , time
--                       , http-conduit
--                       , exceptions
--                       , monad-control
--                       , transformers
--                       , async
--                       -- test-framework, test-framework-quickcheck2,
--
--  other-modules:      DB
--                      DB.Creation
--                      DB.Types
--                      DB.Update
--                      DB.Tx.Lookup
--                      DB.Tx.Safe
--                      DB.Tx.Util
--                      DB.Index.Keys
--                      ---
--                      DB.Util.EntityMap
--                      ---
--                      DB.Model.Entity
--                      Types
--                      Util
--                      Test