name:                paychan-datastore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/runeksvendsen/paychan-datastore#readme
license:             PublicDomain
author:              Rune K. Svendsen
maintainer:          runesvend@gmail.com
copyright:           2016 Rune K. Svendsen
category:            Finance Network Bitcoin
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/runeksvendsen/paychan-datastore


library
  ghc-options:         -W -Wredundant-constraints
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, FunctionalDependencies
  exposed-modules:


  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base16-bytestring
                     , text
                     , unordered-containers
                     , gogol
                     , gogol-core
                     , gogol-datastore
                     , mtl
                     , lens
                     , aeson, vector, scientific
                     , cereal
                     , QuickCheck
                     , string-conversions
                     , time
                     , http-conduit
                     , exceptions
                     , monad-control
                     , resourcet
                     , transformers-base
                     , transformers
                     , async
                     , errors
                     , stm, stm-containers, hashable
                     , base64-bytestring
                     , quickcheck-text
                     , tagged
                     , monad-logger

test-suite conversion-test
  default-language: Haskell2010
  default-extensions: OverloadedStrings, MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, FunctionalDependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: src
  main-is: Test/Main.hs
  other-modules:
  -- Test.ArbitraryJSON, DB.Types, DB.Model.Convert.Properties, DB.Model.Value.Native, DB.Creation
  ghc-options: -main-is Test.Main
  build-depends:
      base
    , paychan-datastore
    , gogol-datastore
    , aeson
    , HUnit >= 1.3
    , lens
    , QuickCheck >= 2.8.2
    , test-framework, test-framework-quickcheck2
    , quickcheck-text
    , scientific
    , text
    , bytestring
    , vector
    , transformers
    , unordered-containers
    , string-conversions
    , errors
    , exceptions
    , tagged
    , monad-control


test-suite storage-test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -main-is Test -threaded

  default-extensions:   OverloadedStrings
                        MultiParamTypeClasses
                        TypeSynonymInstances
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        FlexibleContexts
                        DataKinds
                        ScopedTypeVariables

  build-depends:       base >= 4.7 && < 5
                       , paychan-datastore
                       , bytestring
                       , base16-bytestring
                       , text
                       , unordered-containers
                       , gogol
                       , gogol-core
                       , gogol-datastore
                       , mtl
                       , lens
                       , aeson, vector, scientific
                       , cereal
                       , bitcoin-payment-channel, promissory-note-types
                       , QuickCheck
                       , string-conversions
                       , time
                       , http-conduit
                       , exceptions
                       , monad-control
                       , resourcet
                       , transformers-base
                       , transformers
                       , async
                       , errors
                       , stm, stm-containers, hashable
                       , base64-bytestring
                       , quickcheck-text
                       , tagged
                       , monad-logger

  other-modules:      ChanDB
                      ChanDB.Types